--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Different Games Conference 2016
+title: Different Games Conference 2018
 description: > # this means to ignore newlines until "baseurl:"
   Different Games Conference is an annual student and volunteer-lead conference
   on diversity and inclusivity in games.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://2016.differentgames.org" # the base hostname & protocol for your site
+url: "http://conference2018.differentgames.org" # the base hostname & protocol for your site
 twitter_username: differentgames
 tumblr_username: differentgamescollective
 
